created quotes-details component

--- a/src/app/quotes-details/quotes-details.component.html
+++ b/src/app/quotes-details/quotes-details.component.html
@@ -1,4 +1,4 @@
-<!-- <div>
+<div>
 <p> Author:
     <strong>{{quotes.author}}</strong> <br>
   Publisher:<strong>{{quotes.publisher}}</strong> <br> UpVotes: {{quotes.upVotes}}<br> DownVotes: {{quotes.downVote}}<br> Days passed since Quote was published <strong>{{quotes.actualDate|dataRange}} days</strong> ago.</p>
@@ -14,4 +14,4 @@
   </div>
   </div>
   
-   -->
+  
