--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   
     <form  #quoteForm='ngForm' (ngSubmit)='quoteSubmission()'>
           <div class="form-group">
@@ -34,4 +34,4 @@
       <button type="Submit" class="btn btn-success btn-lg">Add a Quote</button>
     </form>
   
-  </div> -->
+  </div>
