--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,12 +1,14 @@
+
 <div class="container-fluid">
-  <h2 class="text-center"><b> Quotes Generator</b></h2>
+  <h2 class="text-center" style="margin-top: 3vh"><b> QUOTES GENERATOR</b></h2>
   <hr>
   <div class="row">
     <div class="col-md-4">
       <app-quote-form (addQuote)="quoteSubmission($event)"></app-quote-form>
     </div>
-    <div class="col-md-8">
-      <ol type="i">
+    <div class="col-md-8" style="margin-top: 2vh">
+        <h3 style="margin-left: 15vh; color: rgb(34, 86, 133)">YOUR QUOTES</h3> 
+      <ol type="i" style="margin-top: 3vh">
         <div *ngFor='let quote of quotes;let position = index'>
           <li>{{quote.quote}} </li>
           <button class="btn btn-outline-primary" (click)='toggleDetails(position)'>Quote Details</button> <br>
