--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+/* @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 body{
-    font-size: 15px;
+    font-size: 16px;
     font-family: 'Montserrat', sans-serif;
-}
+    background-image: url(https://wallpaperplay.com/walls/full/1/3/9/100167.jpg);
+    background-position: center;
+    background-size: cover;
+} */
