polished up on forms and styling

--- a/src/app/quotes-details/quotes-details.component.html
+++ b/src/app/quotes-details/quotes-details.component.html
@@ -6,12 +6,12 @@
     ago.</p>
   <div class="row">
     <div class="col-md-4">
-      <button class="btn btn-info" (click)='upVote(true)'>Up Vote</button>
+      <button style="width: 35%;" class="btn btn-info" (click)='upVote(true)'><img src="https://cdn1.iconfinder.com/data/icons/hand-gestures-28/128/hand-thumbs-up-512.png" style="width:50%;"></button>
     </div>
     <div class="col-md-4">
-      <button class="btn btn-warning"  (click)='downVote(true)'>Down Vote</button>
+        <button style="width: 35%;" class="btn btn-warning" (click)='downVote(true)'><img src="http://pngimg.com/uploads/dislike/dislike_PNG63.png" style="width:50%"></button>
     </div>
     <div class="col-md-4">
-      <button class="btn btn-danger" (click)='deleteQuote(true)'>Delete Quote</button>
+        <button style="width: 35%;" class="btn btn-danger" (click)='deleteQuote(true)'><img src="https://png.pngtree.com/svg/20161124/delete_26855.png" style="width:50%"></button>
     </div>
   </div>
