--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -1,34 +1,34 @@
-<h3 style="text-align: center; color: rgb(34, 86, 133); margin-top: 2vh;">CREATE A NEW QUOTE</h3>
+<h3 style="text-align: center; color: rgb(34, 86, 133); margin-top: 2vh;"><b>CREATE A NEW QUOTE</b></h3>
 <div class="container-fluid">
 
     <form #quoteForm='ngForm' (ngSubmit)='quoteSubmission()' style="margin-top: 4vh;">
         <div class="form-group">
             <label for="quote"> <b> Quote</b></label>
-            <textarea style="background: rgba(83, 182, 199, 0.383); border: 0" class="form-control"
+            <textarea style="background: rgba(56, 128, 141, 0.219); border: 0;" class="form-control"
                 placeholder="Enter a quote.." id="quote" rows="5" cols="10" [(ngModel)]="newQuote.quote" name="quote"
                 #quoteref="ngModel" required></textarea>
             <div [hidden]="quoteref.valid || quoteref.pristine" class="alert alert-info">
                 <h6>Enter a Quote before submitting</h6>
             </div> <br>
             <label for="author"><b>Author's name</b></label>
-            <input  style="background: rgba(83, 182, 199, 0.383); border: 0" type="text" required class="form-control"
+            <input  style="background: rgba(56, 128, 141, 0.219); border: 0" type="text" required class="form-control"
                 placeholder="Enter name of Author.." id="author" [(ngModel)]="newQuote.author" name="author"
                 #author="ngModel">
             <div [hidden]="author.pristine || author.valid" class="alert alert-info"> </div> <br>
             <label for="publisher"><b>Posted By</b></label>
-            <input style="background: rgba(83, 182, 199, 0.383); border: 0" type="text" required class="form-control"
+            <input style="background: rgba(56, 128, 141, 0.219); border: 0" type="text" required class="form-control"
                 placeholder="Enter your name.." id="publisher" [(ngModel)]="newQuote.publisher" name="publisher"
                 #publisher="ngModel">
             <div [hidden]="publisher.pristine || publisher.valid" class="alert alert-info">
                 <h6>Enter Name of the person posting the Quote</h6>
             </div> <br>
             <label for="date"> <b>Date Posted</b></label><br>
-            <input style="background: rgba(83, 182, 199, 0.383); border: 0" type='date' id="date"
+            <input class="form-control" style="background: rgba(56, 128, 141, 0.219); border: 0" type='date' id="date"
                 [(ngModel)]="newQuote.actualDate" name="actualDate" #actualDate="ngModel" required>
             <div [hidden]="actualDate.pristine || actualDate.valid" class="alert alert-info">
                 <h6>Enter the Full date</h6>
             </div> <br>
         </div>
-        <button style="margin-left: 15vh;" type="Submit" class="btn btn-success btn-lg">Add a Quote</button>
+        <button style="margin-left: 25vh;" type="Submit" class="btn btn-success btn-lg">Add Quote</button>
     </form>
 </div>
