--- a/src/app/quotes/quotes.component.html
+++ b/src/app/quotes/quotes.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
-  <h2 class="text-center" style="margin-top: 3vh"><b> QUOTES GENERATOR</b></h2>
+  <h2 id="head" style="margin-top: 3vh; text-align: center; font-size: 39px; color: rgb(3, 31, 93)"><b> *QUOTES  GENERATOR*</b></h2>
   <hr>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
       <app-quote-form (addQuote)="quoteSubmission($event)"></app-quote-form>
     </div>
-    <div class="col-md-8" style="margin-top: 2vh">
-      <h3 style="margin-left: 15vh; color: rgb(34, 86, 133)"> YOUR QUOTES</h3>
+    <div class="col-md-7" style="margin-top: 2vh">
+      <h3 style="margin-left: 15vh; color: rgb(34, 86, 133)"> <b>YOUR QUOTES</b></h3>
       <ol type="i" style="margin-top: 3vh">
         <div *ngFor='let quote of quotes;let position = index'>
           <li>{{quote.quote}} </li>
@@ -18,4 +18,4 @@
       </ol>
     </div>
   </div>
-</div> ,
+</div> 
