--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,14 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap');
 body{
     font-size: 16px ;
     font-family: 'Montserrat', sans-serif;
     background-image: url(https://wallpaperplay.com/walls/full/1/3/9/100167.jpg);
     background-position: center;
     background-size: cover;
+}
+
+#head{
+    font-family: 'Righteous', cursive;
 }
